--- a/index.html
+++ b/index.html
@@ -205,107 +205,94 @@
             origin:'left',
             distance:'300px'
         });
-        sr.reveal('#services h1',{
-            duration:500,
+          sr.reveal('#services h1',{
             origin:'left',
             distance:'50px',
 
-            viewFactor:0.2
+            viewFactor:0.1
 
         });
         sr.reveal('#services .l',{
-            duration:500,
             origin:'left',
             distance:'50px',
             viewFactor:0.1
 
         });
         sr.reveal('#services .r',{
-            duration:500,
             origin:'right',
             distance:'50px',
-            viewFactor:0.1
+            viewFactor:0
 
         });
         sr.reveal('#services .m',{
-            duration:500,
             origin:'top',
+                distance:'50px',
+            viewFactor:0.1
 
         });
         sr.reveal('#about-us h1',{
-            duration:500,
             origin:'left',
             distance:'120px',
-            viewFactor:0.2
+            viewFactor:0.1
 
         });
         sr.reveal('#about-us p',{
-            duration:500,
             origin:'left',
             distance:'120px',
-            viewFactor:0.2
+            viewFactor:0.1
 
         });
         sr.reveal('#services .btn',{
-            duration:200,
-            delay:1400,
-            viewFactor:0.2
+            delay:400,
+            viewFactor:0.1
 
         });
         sr.reveal('#about-us li',{
-            duration:1000,
             origin:'right',
             delay:100,
             distance:'120px',
 
         });
         sr.reveal('#about-us img',{
-            duration:500,
             origin:'top',
             distance:'50px',
 
         });
         
         sr.reveal('#testimonials h1',{
-            duration:1000,
             origin:'left',
             distance:'120px',
-            viewFactor:0.2
+            viewFactor:0
 
         });
         sr.reveal('#testimonials .l',{
-            duration:1000,
             origin:'left',
             distance:'300px',
-            viewFactor:0.2
+            viewFactor:0
 
         });
         sr.reveal('#testimonials .m',{
-            duration:500,
             origin:'right',
             distance:'300px',
-            viewFactor:0.2
+            viewFactor:0
 
         });
         sr.reveal('#testimonials .r',{
-            duration:500,
             origin:'right',
-            viewFactor:0.2
+            viewFactor:0
 
         });
         sr.reveal('#social p',{
-            duration:500,
             origin:'left',
             distance:'300px',
-            viewFactor:0.2
+            viewFactor:0.1
 
         });
         sr.reveal('#social a',{
-            duration:500,
             origin:'right',
             delay:400,
             distance:'400px',
-            viewFactor:0.2
+            viewFactor:0.1
 
         });
         sr.reveal(".copy",{
@@ -313,7 +300,7 @@
             origin:'right',
             delay:500,
             distance:'400px',
-            viewFactor:0.2
+            viewFactor:0.1
 
         })
         
