--- a/index.html
+++ b/index.html
@@ -209,42 +209,34 @@
             origin:'left',
             distance:'50px',
 
-            viewFactor:0.1
 
         });
         sr.reveal('#services .l',{
             origin:'left',
             distance:'50px',
-            viewFactor:0.1
 
         });
         sr.reveal('#services .r',{
             origin:'right',
             distance:'50px',
-            viewFactor:0
 
         });
         sr.reveal('#services .m',{
             origin:'top',
-                distance:'50px',
-            viewFactor:0.1
-
+            distance:'50px',
         });
         sr.reveal('#about-us h1',{
             origin:'left',
             distance:'120px',
-            viewFactor:0.1
 
         });
         sr.reveal('#about-us p',{
             origin:'left',
             distance:'120px',
-            viewFactor:0.1
 
         });
         sr.reveal('#services .btn',{
             delay:400,
-            viewFactor:0.1
 
         });
         sr.reveal('#about-us li',{
@@ -261,29 +253,25 @@
         
         sr.reveal('#testimonials h1',{
             origin:'left',
-            distance:'120px',
-            viewFactor:0
+            distance:'20px',
 
         });
         sr.reveal('#testimonials .l',{
-            origin:'left',
+            origin:'top',
             distance:'300px',
-            viewFactor:0
 
         });
         sr.reveal('#testimonials .m',{
-            origin:'right',
+            origin:'top',
             distance:'300px',
-            viewFactor:0
 
         });
         sr.reveal('#testimonials .r',{
-            origin:'right',
-            viewFactor:0
+            origin:'top',
 
         });
         sr.reveal('#social p',{
-            origin:'left',
+            origin:'top',
             distance:'300px',
             viewFactor:0.1
 
