--- a/index.html
+++ b/index.html
@@ -191,96 +191,124 @@
     <script>
         window.sr=ScrollReveal();
         sr.reveal('.navbar',{
-            duration:1000,
+            duration:2000,
             origin:'right'
         });
         sr.reveal('#footer .pic',{
-            duration:1000,
+            duration:2000,
             delay:400,
             origin:'right',
             distance:'300px'
         });
         sr.reveal('.fd',{
-            duration:1000,
+            duration:2000,
+            delay:600,
             origin:'left',
             distance:'300px'
         });
-          sr.reveal('#services h1',{
+        sr.reveal('#services h1',{
+            duration:2000,
             origin:'left',
-            distance:'50px',
-
+            distance:'120px',
+            viewFactor:0.2
 
         });
         sr.reveal('#services .l',{
+            duration:2000,
             origin:'left',
-            distance:'50px',
+            distance:'300px',
+            viewFactor:0.2
 
         });
         sr.reveal('#services .r',{
+            duration:2000,
             origin:'right',
-            distance:'50px',
+            distance:'300px',
+            viewFactor:0.2
 
         });
         sr.reveal('#services .m',{
+            duration:2000,
             origin:'top',
-            distance:'50px',
+            viewFactor:0.2
+
         });
         sr.reveal('#about-us h1',{
+            duration:2000,
             origin:'left',
             distance:'120px',
+            viewFactor:0.2
 
         });
         sr.reveal('#about-us p',{
+            duration:2000,
             origin:'left',
             distance:'120px',
+            viewFactor:0.2
 
         });
         sr.reveal('#services .btn',{
-            delay:400,
+            duration:200,
+            delay:1400,
+            viewFactor:0.2
 
         });
         sr.reveal('#about-us li',{
+            duration:2000,
             origin:'right',
-            delay:100,
+            delay:500,
             distance:'120px',
+            viewFactor:0.2
 
         });
         sr.reveal('#about-us img',{
+            duration:2000,
             origin:'top',
-            distance:'50px',
+            distance:'120px',
+            viewFactor:0.2
 
         });
         
         sr.reveal('#testimonials h1',{
+            duration:2000,
             origin:'left',
-            distance:'20px',
+            distance:'120px',
+            viewFactor:0.2
 
         });
         sr.reveal('#testimonials .l',{
-            origin:'top',
+            duration:2000,
+            origin:'left',
             distance:'300px',
+            viewFactor:0.2
 
         });
         sr.reveal('#testimonials .m',{
-            origin:'top',
+            duration:2000,
+            origin:'right',
             distance:'300px',
+            viewFactor:0.2
 
         });
         sr.reveal('#testimonials .r',{
-            origin:'top',
+            duration:2000,
+            origin:'right',
+            viewFactor:0.2
 
         });
         sr.reveal('#social p',{
-            origin:'top',
+            duration:2000,
+            origin:'left',
             distance:'300px',
-            viewFactor:0.1
+            viewFactor:0.2
 
         });
         sr.reveal('#social a',{
+            duration:2000,
             origin:'right',
-            delay:400,
+            delay:500,
             distance:'400px',
-            viewFactor:0.1
+            viewFactor:0.2
 
         });
         sr.reveal(".copy",{
@@ -288,7 +316,7 @@
             origin:'right',
             delay:500,
             distance:'400px',
-            viewFactor:0.1
+            viewFactor:0.2
 
         })
         
