--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
 </head>
 <body>
+  <button onclick="scrollWindow()" class="p"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
+    </button>
     <section id="navbar">
         <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="#"><img src="demo-logo.png"></a>
@@ -386,6 +388,12 @@ step: function (now) {
     <script>
         	var scroll = new SmoothScroll('a[href*="#"]');
 
+    </script>
+    <script>
+        function scrollWindow()
+        {
+            window.scrollTo(0,-50);
+        }
     </script>
 </body>
 </html>
